DD MMM YYYY - 2.9.2 - To be released
------------------------------------

 * Allow drop to work with mod_http2
   [Issue #1308, #992 - @bazzadp]
 * Fix SecConn(Read|Write)StateLimit on Apache 2.4
   [Issue #1340, #1337, #786 - Sander Hoentjen]
 * {dis|en}able-stopwatch-logging: Option to disable logging of stopwatches
   in audit log.
   [Issue #1067 - Marc Stern]
 * {dis|en}able-dechunk-logging: Option to disable logging of
   dechunking in audit log when log level < 9.
 * Updates libinjection to: da027ab52f9cf14401dd92e34e6683d183bdb3b4
   [ModSecurity team]
 * {dis|en}able-handler-logging: Option to disable logging of Apache handler
   in audit log
   [Issue #1070, #1381 - Marc Stern]
 * {dis|en}able-collection-delete-problem-logging: Option to disable logging of
   collection delete problem in audit log when log level < 9.
   [Issue #1380 - Marc Stern]
 * Adds rule id in logs whenever a rule fail.
   [Issue #1379, #391 - Marc Stern]
 * {dis|en}able-server-logging: Option to disable logging of
   "Server" in audit log when log level < 9.
   [Issue #1070 - Marc Stern]
 * {dis|en}able-filename-logging: Option to disable logging of filename
   in audit log.
   [Issue #1065 - Marc Stern]
 * Reads fuzzy hash databases on init
   [Issue #1339 - Robert Paprocki and @Rendername]
 * Changes the configuration to recognize soap+xml as XML
   [Issue #1374 - @emphazer and Chaim Sanders]
 * Fix building with nginx >= 1.11.11
   [Issue #1373, #1359 - Andrei Belov and Thomas Deutschmann]
 * Using Czechia instea of Czech Republic
   [Issue #1258 - Michael Kjeldsen]
 * {dis|en}able-rule-id-validation: Option to disable rule id validation
   [Issue #1150 - Marc Stern and ModSecurity team]
 * JSON Log: Append a newline to concurrent JSON audit logs
   [Issue #1233 - Robert Paprocki]
 * JSON Log: Don't unnecessarily rename request body parts in cleanup
   [Issue #1223 - Robert Paprocki]
 * Fix error message inside audit logs
   [Issue #1216 and #1073 - Armin Abfalterer]